tree-sitter-standarx/test/corpus/basics.txt
================================================================================
empty file
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
simple assignment
================================================================================
version "0.1.0"
--------------------------------------------------------------------------------

(source_file
  (assignment
    key: (identifier)
    value: (plain_string)))

================================================================================
scalar assignments
================================================================================
a 42
b 3.14
c true
d false
e null
--------------------------------------------------------------------------------

(source_file
  (assignment key: (identifier) value: (integer))
  (assignment key: (identifier) value: (float))
  (assignment key: (identifier) value: (boolean))
  (assignment key: (identifier) value: (boolean))
  (assignment key: (identifier) value: (null)))

================================================================================
block — no label
================================================================================
project {
    path "./ext"
}
--------------------------------------------------------------------------------

(source_file
  (block
    kind: (identifier)
    (assignment key: (identifier) value: (plain_string))))

================================================================================
block — with label
================================================================================
project "ext" {
    path "./ext"
}
--------------------------------------------------------------------------------

(source_file
  (block
    kind: (identifier)
    label: (plain_string)
    (assignment key: (identifier) value: (plain_string))))

================================================================================
nested blocks
================================================================================
project "ext" {
    metadata {
        author "alice"
    }
}
--------------------------------------------------------------------------------

(source_file
  (block
    kind: (identifier)
    label: (plain_string)
    (block
      kind: (identifier)
      (assignment key: (identifier) value: (plain_string)))))

================================================================================
list value
================================================================================
tasks ["build" "test"]
--------------------------------------------------------------------------------

(source_file
  (assignment
    key: (identifier)
    value: (list
      (plain_string)
      (plain_string))))

================================================================================
map inside list
================================================================================
entries [{ name "a" value 1 }]
--------------------------------------------------------------------------------

(source_file
  (assignment
    key: (identifier)
    value: (list
      (map
        key: (identifier) value: (plain_string)
        key: (identifier) value: (integer)))))

================================================================================
ref path
================================================================================
depends task.build
chain a.b.c
--------------------------------------------------------------------------------

(source_file
  (assignment
    key: (identifier)
    value: (ref (identifier) (identifier)))
  (assignment
    key: (identifier)
    value: (ref (identifier) (identifier) (identifier))))

================================================================================
ref with quoted segment
================================================================================
depends task."with space"
--------------------------------------------------------------------------------

(source_file
  (assignment
    key: (identifier)
    value: (ref (identifier) (plain_string))))

================================================================================
comments
================================================================================
# top-level comment
version "1.0"
# trailing comment after stmt
--------------------------------------------------------------------------------

(source_file
  (comment)
  (assignment key: (identifier) value: (plain_string))
  (comment))
